--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,7 @@
     }
 
     .note {
+        position: relative;
         background: var(--highlight-color);
         width: 85%;
         margin: 25px auto;
@@ -51,6 +52,16 @@
         left: 0;
         right: 0;
         margin: 0 auto;
+    }
+
+    #remove-note-btn {
+        position: absolute;
+        right: 10px;
+        background: var(--accent-color);
+        border: none;
+        border-radius: 5px;
+        height: 20px;
+        width: 20px;
     }
 
     .modal {
